--- a/package.json
+++ b/package.json
@@ -18,15 +18,26 @@
     "docker-exec": "docker-compose exec project_one sh -c",
     "docker-remove-network": "docker-compose down && docker network rm local",
     "docker-ensure-start-osx": "if [ -z `docker ps -q --no-trunc | grep $(docker-compose ps -q project_one)` ]; then docker-compose up -d; fi",
-    "docker-ensure-start-win": "docker container inspect projectoneboiler_project_one_1 || docker-compose up -d"
+    "docker-ensure-start-win": "docker container inspect projectoneboiler_project_one_1 || docker-compose up -d",
+    "lint": "yarn lint-fix && ./node_modules/.bin/eslint --ext .js ./public/javascript/",
+    "lint-fix": "./node_modules/.bin/eslint --ext .js ./public/javascript/ --fix"
   },
   "dependencies": {
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.16.0",
     "express": "^4.16.4",
     "fs": "^0.0.1-security",
+    "husky": "^1.3.1",
     "path": "^0.12.7",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "yarn lint"
+    }
   }
 }
